--- a/elastic/Dockerfile
+++ b/elastic/Dockerfile
@@ -1,8 +1,8 @@
-FROM alpine:3.11 as builder
+FROM alpine:3.12 as builder
 
 LABEL maintainer "https://github.com/blacktop"
 
-ENV ZEEK_VERSION 3.1.1
+ENV ZEEK_VERSION 3.1.4
 
 RUN apk add --no-cache zlib openssl libstdc++ libpcap libgcc
 RUN apk add --no-cache -t .build-deps \
@@ -11,7 +11,7 @@ RUN apk add --no-cache -t .build-deps \
   linux-headers \
   openssl-dev \
   libpcap-dev \
-  python-dev \
+  python3-dev \
   zlib-dev \
   binutils \
   fts-dev \
@@ -54,7 +54,6 @@ RUN echo "===> Compiling af_packet plugin..." \
 RUN echo "===> Installing hosom/file-extraction package..." \
   && cd /tmp \
   && git clone https://github.com/hosom/file-extraction.git \
-  && find file-extraction -name "*.bro" -exec sh -c 'mv "$1" "${1%.bro}.zeek"' _ {} \; \
   && mv file-extraction/scripts /usr/local/zeek/share/zeek/site/file-extraction
 
 RUN echo "===> Installing corelight/json-streaming-logs package..." \
@@ -63,13 +62,13 @@ RUN echo "===> Installing corelight/json-streaming-logs package..." \
   && find json-streaming-logs -name "*.bro" -exec sh -c 'mv "$1" "${1%.bro}.zeek"' _ {} \; \
   && mv json-streaming-logs/scripts /usr/local/zeek/share/zeek/site/json-streaming-logs
 
-RUN echo "===> Shrinking image..." \
-  && strip -s /usr/local/zeek/bin/zeek
+# RUN echo "===> Shrinking image..." \
+#   && strip -s /usr/local/zeek/bin/zeek
 
 RUN echo "===> Size of the Zeek install..." \
   && du -sh /usr/local/zeek
 ####################################################################################################
-FROM alpine:3.11 as geoip
+FROM alpine:3.12 as geoip
 
 ENV MAXMIND_CITY https://geolite.maxmind.com/download/geoip/database/GeoLite2-City.tar.gz
 ENV MAXMIND_CNTRY https://geolite.maxmind.com/download/geoip/database/GeoLite2-Country.tar.gz
@@ -87,7 +86,7 @@ RUN cd /tmp \
 # && tar xzvf GeoLite2-ASN.tar.gz \
 # && mv GeoLite2-ASN*/GeoLite2-ASN.mmdb /usr/share/GeoIP/
 ####################################################################################################
-FROM alpine:3.10
+FROM alpine:3.12
 
 LABEL maintainer "https://github.com/blacktop"
 
