--- a/3.0/Dockerfile
+++ b/3.0/Dockerfile
@@ -57,6 +57,16 @@ RUN echo "===> Installing hosom/file-extraction package..." \
   && find file-extraction -name "*.bro" -exec sh -c 'mv "$1" "${1%.bro}.zeek"' _ {} \; \
   && mv file-extraction/scripts /usr/local/zeek/share/zeek/site/file-extraction
 
+RUN echo "===> Installing Community-Id..." \
+  && cd /tmp \
+  && git clone https://github.com/corelight/zeek-community-id.git \
+  && cd /tmp/zeek-community-id \
+  && CC=clang ./configure --zeek-dist=/tmp/zeek \
+  && cd /tmp/zeek-community-id/build \
+  && make -j 2 \
+  && make install \
+  && /usr/local/zeek/bin/zeek -NN Corelight::CommunityID
+
 RUN echo "===> Shrinking image..." \
   && strip -s /usr/local/zeek/bin/zeek
 
