--- a/3.2/Dockerfile
+++ b/3.2/Dockerfile
@@ -43,9 +43,9 @@ RUN echo "===> Compiling zeek..." \
   && make install
 
 RUN echo "===> Compiling af_packet plugin..." \
-  && cd /tmp \
+  && cd /tmp/zeek/auxil/ \
   && git clone https://github.com/J-Gras/zeek-af_packet-plugin.git \
-  && cd /tmp/zeek-af_packet-plugin \
+  && cd /tmp/zeek/auxil/zeek-af_packet-plugin \
   && CC=clang ./configure --with-kernel=/usr --zeek-dist=/tmp/zeek \
   && make -j 2 \
   && make install \
@@ -55,6 +55,16 @@ RUN echo "===> Installing hosom/file-extraction package..." \
   && cd /tmp \
   && git clone git://github.com/hosom/file-extraction \
   && mv file-extraction/scripts /usr/local/zeek/share/zeek/site/file-extraction
+
+RUN echo "===> Installing Community-Id..." \
+  && cd /tmp \
+  && git clone https://github.com/corelight/zeek-community-id.git \
+  && cd /tmp/zeek-community-id \
+  && CC=clang ./configure --zeek-dist=/tmp/zeek \
+  && cd /tmp/zeek-community-id/build \
+  && make -j 2 \
+  && make install \
+  && /usr/local/zeek/bin/zeek -NN Corelight::CommunityID
 
 RUN echo "===> Shrinking image..." \
   && strip -s /usr/local/zeek/bin/zeek
