--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,17 +46,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image (v3)
-        id: docker_build_3
-        uses: docker/build-push-action@v2
-        with:
-          context: ./3.2
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: |
-            blacktop/zeek:3
-            blacktop/zeek:3.2
-            blacktop/zeek:3.2.4
-          labels: ${{ steps.meta.outputs.labels }}
+      # - name: Build and push Docker image (v3)
+      #   id: docker_build_3
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./3.2
+      #     push: ${{ github.event_name != 'pull_request' }}
+      #     tags: |
+      #       blacktop/zeek:3
+      #       blacktop/zeek:3.2
+      #       blacktop/zeek:3.2.4
+      #     labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push Docker image (v4.0)
         id: docker_build_4
