--- a/docker-compose.elastic.yml
+++ b/docker-compose.elastic.yml
@@ -44,7 +44,7 @@ services:
       - ./pcap:/pcap
     networks:
       - elastinet
-    command: -F -r smallFlows.pcap local file-extraction/plugins/extract-all-files.bro "Site::local_nets += { 192.168.5.0/24, 10.0.2.0/24 }"
+    command: -F -r smallFlows.pcap local file-extraction/plugins/extract-all-files.zeek "Site::local_nets += { 192.168.5.0/24, 10.0.2.0/24 }"
 
 networks:
   elastinet:
